--- a/bevim_project/bevim/templates/login.html
+++ b/bevim_project/bevim/templates/login.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-{% column xs="7" md="10" md_offset="6" lg="5" %}
+{% column lg="4" md_offset="4"%}
 
 <div align="center">
 	<form method="post" action="{% url 'login' %}" class="form-signin">
