Issue #03 - Translating the app and updating the readme

--- a/bevim_project/bevim/templates/experiment.html
+++ b/bevim_project/bevim/templates/experiment.html
@@ -65,7 +65,7 @@
 
 
 			{% column lg="2"%}
-				<input type="button" value="Add Another Job" id="add_more" class="btn btn-success">
+				<input type="button" value="{% trans 'Add Another Job' %}" id="add_more" class="btn btn-success">
 
 			{% endcolumn %}
 
