--- a/bevim_project/bevim/templates/base.html
+++ b/bevim_project/bevim/templates/base.html
@@ -9,10 +9,10 @@
 {% endblock %}
 
 {% block body-content %}
-    <script src="{% static "js/jquery-1.11.1.js" %}"></script>
-    <script src="{% static "js/rango-jquery.js" %}"></script>
+    <script src="{% static 'js/jquery-1.11.1.js' %}"></script>
+    <script src="{% static 'js/rango-jquery.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="{% static "js/experiment.js" %}"></script>
+    <script src="{% static 'js/experiment.js' %}"></script>
     
     <nav class="navbar navbar-default navbar-fixed-top">
 	  <div class="container">
@@ -72,6 +72,5 @@
                 {% endblock %}
             </div>
         </div>
-
 
 {% endblock %}
