--- a/bevim_project/bevim/templates/base.html
+++ b/bevim_project/bevim/templates/base.html
@@ -3,17 +3,14 @@
 {% load bootstrap3 %}
 {% load i18n %}
 
-
 {% block head-title %}
     BEViM
 {% endblock %}
 
 {% block body-content %}
-    <script src="{% static 'js/jquery-1.11.1.js' %}"></script>
-    <script src="{% static 'js/rango-jquery.js' %}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/experiment.js' %}"></script>
-    
+
     <nav class="navbar navbar-default navbar-fixed-top">
 	  <div class="container">
 	    <div class="navbar-header">
@@ -43,7 +40,7 @@
                     <a href="{% url 'logout'%}">{% trans 'Logout' %}</a>
                 </li>
             {% endif %}
-            
+
         </ul>
         </div>
 
